--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             >
               <a
                 download=""
-                href="img/10200319012_Oishik Shaw_lab2.pdf"
+                href="img/10200319012_Oishik biswas_lab2.pdf"
                 class="button button--flex"
               >
                 Download<i class="uil uil-download-alt button_icon"></i>
@@ -404,7 +404,7 @@
               <div>
                 <h3 class="contact_title">Email Me</h3>
                 <span class="contact_subtitle" type="email"
-                  >Oishikrot234@gmail.com</span
+                  >Oishikthegreat@gmail.com</span
                 >
               </div>
             </div>
@@ -467,14 +467,14 @@
           data-intro=""
         >
           <a
-            href="https://www.linkedin.com/in/Oishik-shaw-66784418b/"
+            href="https://www.linkedin.com/in/Oishik-biswas-66784418b/"
             target="_blank"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <a href="https://www.facebook.com/Oishik.shaw.5220/" target="_blank"
+          <a href="https://www.facebook.com/Oishik.biswas.5220/" target="_blank"
             ><i class="fab fa-facebook-square"></i
           ></a>
-          <a href="https://github.com/Oishikshaw" target="_blank"
+          <a href="https://github.com/Oishikbiswas" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
         </div>
